[package]
name = "rust-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "primitives"
path = "src/primitives/main.rs"

[[bin]]
name = "containers"
path = "src/containers/main.rs"

[[bin]]
name = "controlflow"
path = "src/controlflow/main.rs"
