[package]
name = "rust-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "misc"
path = "src/00-misc/main.rs"

[[bin]]
name = "primitives"
path = "src/01-primitives/main.rs"

[[bin]]
name = "structs"
path = "src/02-structs/main.rs"